pkg/lang/testdata/ub/configurations/invalid/meta-field.ub
configurations: { aws: { default: { @for-each: var.tags } } }
